--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "mos/ctextfilter": "1.2.2",
         "mos/cform": "2.*@dev",
         "phpmvc/comment": "dev-master",
-        "mos/cdatabase": "dev-master",
-        "eric-n93/cuser": "dev-master"
+        "mos/cdatabase": "dev-master"
     },
     "autoload": {
         "psr-4": { "Anax\\": "src/" }
